Изменение набора переменных окружения

--- a/.env
+++ b/.env
@@ -1,7 +1,16 @@
 OPEN_API_KEY=0
-TG_API_KEY=0
+TG_API_TOKEN=0
 TG_ADMIN_ID=0
 LAST_NOTICE_ID=0
-SITE_URL="<сайт клиента>"
-NOTICE_URL="https://lumendatabase.org/notices/search?term=<сайт клиента>"
+
 ANSWER_FORM_URL="https://reportcontent.google.com/forms/counter_notice?web-redirect=f&product=appengine&visit_id=638777606370602424-101465267&rd=1"
+
+COUNTRY=NULL
+NAME=NULL
+JOB_TITTLE=NULL
+NAME_COMPANY=NULL
+EMAIL=NULL
+ADDRESS=NULL
+PHONE_NUMBER=NULL
+REASON=NULL
+SIGN=NULL
